tests/typechecking/valid/simple_fun2.ml
let rec f x = x + 1 in 
let rec g x = x + 2 in 
print_int (g 40)
