tests/typechecking/invalid/bad_fun.ml
let f g = g 1 2 in
let h a b = a + b in
print_int (f h)
